WebKit Bugzilla
New
Browse
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
257255
Don't crash when we can't resolve currentcolor
https://bugs.webkit.org/show_bug.cgi?id=257255
Summary
Don't crash when we can't resolve currentcolor
Matthieu Dubet
Reported
2023-05-24 04:43:36 PDT
For some properties (gradient, drop-shadow) we can't resolve currentcolor early enough. We should return an invalid color in those cases instead of crashing.
Attachments
Add attachment
proposed patch, testcase, etc.
Matthieu Dubet
Comment 1
2023-05-24 04:43:44 PDT
rdar://108683501
Matthieu Dubet
Comment 2
2023-05-24 04:49:13 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/14287
EWS
Comment 3
2023-05-31 09:48:42 PDT
Committed
264737@main
(80e4d733b917): <
https://commits.webkit.org/264737@main
> Reviewed commits have been landed. Closing PR #14287 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug