[CSS] Resolve "currentcolor" with style if possible https://bugs.webkit.org/show_bug.cgi?id=257255 rdar://108683501

Reviewed by Tim Nguyen.

Ideally, we should never try to resolve "currentcolor" during
style building.
However, for the rare cases where we do it (gradient, drop-shadow)
it's better to use the incomplete style than assuming an absolute color.

* LayoutTests/fast/css/color-mix-various-expected.html: Added.
* LayoutTests/fast/css/color-mix-various.html: Added.
* Source/WebCore/style/ColorFromPrimitiveValue.cpp:
(WebCore::Style::colorFromPrimitiveValueWithResolvedCurrentColor):
* Source/WebCore/style/ElementRuleCollector.cpp:
(WebCore::Style::ElementRuleCollector::addMatchedProperties):

Canonical link: https://commits.webkit.org/264737@main